--- a/package.json
+++ b/package.json
@@ -28,7 +28,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "build-app": "npm run build ",
+    "install-client": "npm install ",
+    "heroku-postbuild": " npm run-script install-client && npm run-script build-app "
   },
   "eslintConfig": {
     "extends": [
